sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:37: error: ';' expected but 'def' found.
}def solve() {
 ^